[gd_scene load_steps=6 format=3 uid="uid://by754k14j4q0j"]

[ext_resource type="Script" path="res://options_screen.gd" id="1_pk5ui"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5jbk6"]
bg_color = Color(0.935165, 0.418952, 0.314054, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kbbgc"]
bg_color = Color(0.686275, 0, 0.0392157, 1)
border_width_left = 15
border_width_bottom = 10
border_color = Color(0.544683, 0.0632604, 0.0420368, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i8lir"]
bg_color = Color(0.352941, 0, 0.0156863, 1)
border_width_left = 15
border_width_bottom = 10
border_color = Color(0.544683, 0.0632604, 0.0420368, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c5yi4"]
bg_color = Color(0.858824, 0, 0.0156863, 1)
border_width_left = 15
border_width_bottom = 10
border_color = Color(0.544683, 0.0632604, 0.0420368, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[node name="OptionsScreen" type="Control"]
custom_minimum_size = Vector2(1080, 2340)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pk5ui")

[node name="background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5jbk6")

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 50.0
offset_right = -40.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2

[node name="MusicContainer" type="HBoxContainer" parent="MainContainer"]
custom_minimum_size = Vector2(800, 150)
layout_direction = 2
layout_mode = 2
alignment = 1

[node name="MusicLabel" type="Label" parent="MainContainer/MusicContainer"]
custom_minimum_size = Vector2(300, 150)
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Music Volume"
horizontal_alignment = 1

[node name="MusicSlider" type="HSlider" parent="MainContainer/MusicContainer"]
custom_minimum_size = Vector2(500, 150)
layout_mode = 2
max_value = 1.0
step = 0.05

[node name="SFXContainer" type="HBoxContainer" parent="MainContainer"]
custom_minimum_size = Vector2(800, 150)
layout_direction = 2
layout_mode = 2
alignment = 1

[node name="SFXLabel" type="Label" parent="MainContainer/SFXContainer"]
custom_minimum_size = Vector2(300, 150)
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "SFX Volume
"

[node name="SFXSlider" type="HSlider" parent="MainContainer/SFXContainer"]
custom_minimum_size = Vector2(500, 150)
layout_mode = 2
max_value = 1.0
step = 0.05

[node name="BackButton" type="Button" parent="."]
layout_mode = 2
offset_left = 40.0
offset_top = 1978.0
offset_right = 1040.0
offset_bottom = 2055.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 48
theme_override_styles/hover = SubResource("StyleBoxFlat_kbbgc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_i8lir")
theme_override_styles/normal = SubResource("StyleBoxFlat_c5yi4")
text = "Back"

[node name="FooterLabel" type="Label" parent="."]
layout_mode = 2
offset_left = 40.0
offset_top = 2211.0
offset_right = 1040.0
offset_bottom = 2280.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 50
text = "Developed by Shinzuu, SKB, Noha & Rii"
horizontal_alignment = 1
